--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "googleapis": "^144.0.0",
-    "mongoose": "^8.8.4"
+    "mongoose": "^8.8.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
