--- a/backend/package.json
+++ b/backend/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "googleapis": "^144.0.0",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.2",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "overrides": {
+    "whatwg-url": "^14.0.0"
   }
 }
